# Quill

./: .gitignore  .gitmodules  README.md  imgui.ini  meson.build
src/: main.cc
src/Core/: Application.cc  Application.hh  Log.cc  Log.hh  Platform.hh
src/UI/: MainView.cc  MainView.hh  PreviewPane.cc  PreviewPane.hh  UIView.hh
